Fix overflowing list of old versions

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -89,7 +89,7 @@ code * {
 }
 
 .list-versions li {
-    display: inline;
+    display: inline-block;
     margin: 2px 10px;
     padding: 10px;
 }
